Added members admin table support for searching individual columns

--- a/src/app/paper-admin/members-admin/members-admin.component.css
+++ b/src/app/paper-admin/members-admin/members-admin.component.css
@@ -5,3 +5,11 @@ th {
 .subscribe-button {
   margin-top: 10px;
 }
+
+tfoot input {
+  width: 70%;
+}
+
+div.ui-datatable-scrollable-body {
+  overflow-y: scroll;
+}
