Restructured new admin such that members are loaded into a service object instead of on members-admin init. Initialized new members-detail component

--- a/src/app/paper-admin/members-admin/members-admin.component.html
+++ b/src/app/paper-admin/members-admin/members-admin.component.html
@@ -31,7 +31,7 @@
                                 </tfoot>
                                 <tbody>
                                     <tr *ngFor="let member of allMembers" [id]="member.id">
-                                        <td>{{member.name}}</td>
+                                        <td><a [routerLink]="member.id">{{member.name}}</a></td>
                                         <td>{{member.email}}</td>
                                         <td>{{member.isSubscribe}}</td>
                                         <td>{{member.createdAt}}</td>
