--- a/src/app/paper-admin/promotions/promotions.component.html
+++ b/src/app/paper-admin/promotions/promotions.component.html
@@ -71,6 +71,10 @@
       <div class="form-group">
         <input type="submit" [disabled]="!f.valid" class="btn btn-fill btn-info">
       </div>
+      <div class="form-group" id="url">
+        <label>Coupon URL</label>
+        <input type="text" class="form-control" readonly [value]="url">
+      </div>
     </div>
   </form>
 </div>
