- Remove terms and conditions link form sign up form. - Remove phone no filed. - redirect user on Plans page after completing 1st sign up step. - redirect user from login page to plans page if subscription is partial.

--- a/src/app/front/components/sign-up/sign-up.component.css
+++ b/src/app/front/components/sign-up/sign-up.component.css
@@ -7,3 +7,22 @@
 .signup-video {
   margin: 35px 0 20px 0;
 }
+
+.fade {
+  height: 0;
+  padding: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: height 250ms linear, opacity 500ms linear;
+}
+
+.fade > span {
+  padding: 5px;
+  display: inline-block;
+}
+
+.fade.in {
+  opacity: 1;
+  height: 27px;
+  transition: height 250ms linear, opacity 500ms linear;
+}
