--- a/src/app/front/components/subscribe/subscribe.component.html
+++ b/src/app/front/components/subscribe/subscribe.component.html
@@ -29,6 +29,10 @@
               </div>
               <div id="VIPPackages" class="tabcontent" style="display:block;min-height: 400px">
                 <div class="rp-plan-container">
+                  <div *ngIf="showPartialSignUpMsg">
+                    Please Complete your sign up process by subscribing to any of Rotopors plans.
+                    <br><br>
+                  </div>
                   <div class="common-loader" *ngIf="isLoading">
                     <md-progress-spinner mode="indeterminate" color="accent"
                                          style="width: 50px;height: 50px"></md-progress-spinner>
