--- a/src/app/front/components/sign-up/sign-up.component.html
+++ b/src/app/front/components/sign-up/sign-up.component.html
@@ -14,8 +14,8 @@
                                                  class="img-responsive"/></span><span>Sign Up</span></h3>
               <p>Signup for a free account today.</p>
               <div #signUpError>
-                <div class="alert alert-danger fade in" *ngIf="signUpErrors">
-                  {{signUpErrors}}
+                <div class="alert alert-danger fade " [class.in]="signUpErrors">
+                  <span>{{signUpErrors}}</span>
                 </div>
               </div>
               <form [formGroup]="signUpForm">
@@ -28,16 +28,16 @@
                                          style="width: 25px;height: 50px;margin-right: 10px"></md-progress-spinner>
                   </div>
                   <div *ngIf="isUserExist != 0">
-                    <div class="alert alert-danger fade in my-alert" *ngIf="isUserExist == 1">
-                      User name already exists.
+                    <div class="alert alert-danger fade my-alert" [class.in]="isUserExist == 1">
+                      <span>User name already exists.</span>
                     </div>
-                    <div class="alert alert-success fade in my-alert" *ngIf="isUserExist == 2">
-                      User name is available.
+                    <div class="alert alert-success fade my-alert" [class.in]="isUserExist == 2">
+                      <span>User name is available.</span>
                     </div>
                   </div>
-                  <div class="alert alert-danger fade in my-alert"
-                       *ngIf="signUpForm.get('userName').touched && signUpForm.get('userName').errors">
-                    User name is a required field.
+                  <div class="alert alert-danger fade my-alert"
+                       [class.in]="signUpForm.get('userName').touched && signUpForm.get('userName').errors">
+                    <span>User name is a required field.</span>
                   </div>
                 </div>
 
@@ -46,62 +46,64 @@
                   <label class="srOnly">First Name</label>
                   <input type="text" name="fName" formControlName="fName" placeholder="First Name">
                   <div class="alert alert-danger fade in my-alert"
-                       *ngIf="signUpForm.get('fName').touched && signUpForm.get('fName').errors">
-                    First name is a required field.
+                       [class.in]="signUpForm.get('fName').touched && signUpForm.get('fName').errors">
+                    <span>First name is a required field.</span>
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="lName" class="srOnly">Last Name</label>
                   <input type="text" id="lName" name="lName" formControlName="lName" placeholder="Last Name">
-                  <div class="alert alert-danger fade in my-alert"
-                       *ngIf="signUpForm.get('lName').touched && signUpForm.get('lName').errors">
-                    Last name is a required field.
+                  <div class="alert alert-danger fade my-alert"
+                       [class.in]="signUpForm.get('lName').touched && signUpForm.get('lName').errors">
+                    <span>Last name is a required field.</span>
                   </div>
                 </div>
                 <div class="form-group">
                   <label for="eId" class="srOnly">Email</label>
                   <input type="email" id="eId" name="eId" formControlName="email" placeholder="Email">
-                  <div class="alert alert-danger fade in my-alert"
-                       *ngIf="signUpForm.get('email').touched && signUpForm.get('email').errors && signUpForm.get('email').errors.required">
-                    Email is a required field.
+                  <div class="alert alert-danger fade my-alert"
+                       [class.in]="signUpForm.get('email').touched && signUpForm.get('email').errors && signUpForm.get('email').errors.required">
+                    <span>Email is a required field.</span>
                   </div>
-                  <div class="alert alert-danger fade in my-alert"
-                       *ngIf="signUpForm.get('email').touched && signUpForm.get('email').errors && signUpForm.get('email').errors.incorrectMailFormat">
-                    Invalid email address.
+                  <div class="alert alert-danger fade  my-alert"
+                       [class.in]="signUpForm.get('email').touched && signUpForm.get('email').errors && signUpForm.get('email').errors.incorrectMailFormat">
+                    <span>Invalid email address.</span>
                   </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" style="display: none">
                   <label class="srOnly">Phone</label>
                   <input type="text" name="phone" formControlName="phone" placeholder="Phone">
                 </div>
                 <div class="form-group">
                   <label class="srOnly">Password</label>
                   <input type="password" name="password" formControlName="password" placeholder="**********">
-                  <div class="alert alert-danger my-alert" *ngIf="signUpForm.get('password').errors?.minlength">
-                    Password is too short
+                  <div class="alert alert-danger fade my-alert"
+                       [class.in]="signUpForm.get('password').errors?.minlength">
+                    <span>Password is too short</span>
                   </div>
-                  <div class="alert alert-danger my-alert" *ngIf="signUpForm.get('password').errors?.maxlength">
-                    Password is too long
+                  <div class="alert alert-danger fade my-alert"
+                       [class.in]="signUpForm.get('password').errors?.maxlength">
+                    <span>Password is too long</span>
                   </div>
-                  <div class="alert alert-danger fade in my-alert"
-                       *ngIf="signUpForm.get('password').touched && signUpForm.get('password').errors">
-                    Password is a required field.
+                  <div class="alert alert-danger fade my-alert"
+                       [class.in]="signUpForm.get('password').touched && signUpForm.get('password').errors?.required">
+                    <span>Password is a required field.</span>
                   </div>
                 </div>
                 <div class="form-group">
                   <label class="srOnly">Confirm Password</label>
                   <input type="password" name="cPassword" formControlName="confirmPassword" placeholder="**********">
                 </div>
-                <div class="alert alert-danger my-alert" *ngIf="signUpForm.errors?.passwordValidator">
-                  Passwords don't match
+                <div class="alert alert-danger fade my-alert" [class.in]="signUpForm.errors?.passwordValidator">
+                  <span>Passwords don't match</span>
                 </div>
-                <div class="form-group chkFrmGrp">
+                <div class="form-group chkFrmGrp" style="display: none">
                   <input type="checkbox" formControlName="tnc" #tnc>
                   <label class="">I Accept the <a href="javascript:void(0)" class="lred">Terms and Conditions</a> of the
                     website</label>
                 </div>
-                <input type="button" value="Sign Up" class="formBtn" (click)="onBtnSignUpClicked()"
-                       [disabled]="!signUpForm.valid || !tnc.checked">
+                <input type="button" value="Next" class="formBtn" (click)="onBtnSignUpClicked()"
+                       [disabled]="!signUpForm.valid">
               </form>
               <!--<pre>
               {{signUpForm.valid | json}}
