--- a/src/app/front/components/subscribe/subscribe.component.html
+++ b/src/app/front/components/subscribe/subscribe.component.html
@@ -6,9 +6,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RpRcXAlSXio?rel=0"
-                      frameborder="0"
-                      allowfullscreen></iframe>
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RpRcXAlSXio?rel=0" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -34,11 +32,9 @@
                     <br><br>
                   </div>
                   <div class="common-loader" *ngIf="isLoading">
-                    <md-progress-spinner mode="indeterminate" color="accent"
-                                         style="width: 50px;height: 50px"></md-progress-spinner>
+                    <md-progress-spinner mode="indeterminate" color="accent" style="width: 50px;height: 50px"></md-progress-spinner>
                   </div>
-                  <div style="display: flex;justify-content: center;align-items: center"
-                       *ngIf="!plans || !plans.length">
+                  <div style="display: flex;justify-content: center;align-items: center" *ngIf="!plans || !plans.length">
                     <span>No Package Found</span>
                   </div>
                   <div class="rp-plan" *ngFor="let plan of plans">
@@ -46,7 +42,7 @@
                     <div class="plan-price">
                       <span *ngIf="params.id">
                         <span class="discount-text" *ngIf="params.discount_type === 'flat'">{{(plan.amount / 100) - params.discount_rate | currency:'USD':true}}</span>
-                        <span class="discount-text" *ngIf="params.discount_type === 'percentage'">{{(plan.amount / 100) * (1 - (params.discount_rate / 100)) | currency:'USD':true}}</span>
+                      <span class="discount-text" *ngIf="params.discount_type === 'percentage'">{{(plan.amount / 100) * (1 - (params.discount_rate / 100)) | currency:'USD':true}}</span>
                       </span>
                       <span *ngIf="!params.id">
                         <span>{{(plan.amount / 100) | currency:'USD':true}}</span>
@@ -54,8 +50,14 @@
                     </div>
                     <div class="plan-time">{{'/'+plan.interval_count+' '+plan.interval}}</div>
                     <div class="plan-trial-period">{{'('+plan.trial_period_days+'-days free trial)'}}</div>
-                    <button class="btn-subscribe btn-lg btn-primary" (click)="onBtnSubscribeClick(plan)">Subscribe
+                    <!-- <button class="btn-subscribe btn-lg btn-primary" (click)="onBtnSubscribeClick(plan)">Subscribe
+                    </button> -->
+                    <button class="btn-subscribe btn-lg btn-primary" (click)="couponClicked(plan)">Subscribe
                     </button>
+                    <!-- <button class="btn-subscribe btn-lg btn-primary" (click)="open(content, plan)">Subscribe
+                    </button> -->
+
+
                   </div>
                 </div>
               </div>
@@ -67,3 +69,64 @@
   </div>
 </section>
 <!-- Login Page Ends -->
+
+<template #couponTemplateRef let-couponDialog="dialogRef">
+  <div class="downloadModal">
+    <div class="modal-header">
+      <button type="button" class="close" (click)="couponDialog.close(true)"><span aria-hidden="true">&times;</span>
+      </button>
+      <h1 class="modal-title" style="font-size: 26px" id="myModalLabel">Enter Your Coupon</h1>
+    </div>
+    <div class="modal-body">
+      <div class="alert alert-warning fade in" *ngIf="errorMsg">
+        {{errorMsg }}
+      </div>
+      <div class="form-group">
+        <label class="srOnly">Coupon Code</label>
+        <input type="text"
+               class="col-xs-12"
+               name="cId"
+               placeholder="Code"
+               #couponCode style="height: 36px;">
+      </div>
+    </div>
+
+    <div class="modal-footer">
+      <button type="button" class="btn btn-primary" (click)="onBtnSubscribeClick(couponDialog, couponCode.value);"><span
+       area-hidden="true"></span> Apply
+      </button>
+      <button type="button" class="btn btn-default" (click)="onBtnSubscribeClick(couponDialog, false);">Skip</button>
+    </div>
+  </div>
+</template>
+
+
+<!-- <ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Enter Coupon Code</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+				      <span aria-hidden="true">&times;</span>
+				    </button>
+  </div>
+  <div class="modal-body">
+    <form class="form-horizontal" id="signup" novalidate (ngSubmit)="onBtnSubscribeClick()">
+
+
+      <div class="alert alert-warning fade in" *ngIf="coupon.errorMsg">
+        {{ coupon.errorMsg }}
+      </div>
+
+      <div class="form-group">
+        <label class="srOnly">Coupon Code</label>
+        <input placeholder="Code"
+               class="form-control" type="text" name="code"  [(ngModel)]="coupon.code" style="height: 36px;">
+      </div>
+
+      <div class="form-group m-b-0 m-l-30">
+        <div class="offset-sm-1 col-sm-11">
+          <button type="submit" class="btn btn-info waves-effect waves-light m-t-10 m-r-20">Apply</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</ng-template> -->
