--- a/src/app/front/components/subscribe/subscribe.component.html
+++ b/src/app/front/components/subscribe/subscribe.component.html
@@ -77,11 +77,11 @@
       </button>
       <h1 class="modal-title" style="font-size: 26px" id="myModalLabel">Enter Your Coupon</h1>
     </div>
-    <div class="modal-body">
+    <div class="modal-body" style="margin: 10px 0px 45px;">
       <div class="alert alert-warning fade in" *ngIf="errorMsg">
         {{errorMsg }}
       </div>
-      <div class="form-group">
+      <div class="form-group form-group col-xs-4 col-xs-offset-4">
         <label class="srOnly">Coupon Code</label>
         <input type="text"
                class="col-xs-12"
