article url updated

--- a/src/app/front/components/articles/articles.component.html
+++ b/src/app/front/components/articles/articles.component.html
@@ -106,6 +106,7 @@
                                        src="{{findMedia(post.featured_media)}}" alt="" class="img-responsive">
                                 </div>
                                 <div class="mPlaceInfoWrap">
+                                  {{post.id}}
                                   <a class="mPlaceHedin">{{post.title.rendered}}</a>
                                   <p class="mPlacePara">{{post.extract}}</p>
                                   <!--<p class="mPlaceWrtr">Posted By: <a href="javascript:void(0)">Derek Carty</a></p>-->
