dashboard changes and signup text changed

--- a/src/app/front/components/subscribe/subscribe.component.html
+++ b/src/app/front/components/subscribe/subscribe.component.html
@@ -28,7 +28,7 @@
               <div id="VIPPackages" class="tabcontent" style="display:block;min-height: 400px">
                 <div class="rp-plan-container">
                   <div *ngIf="showPartialSignUpMsg">
-                    Please Complete your sign up process by subscribing to any of Rotopors plans.
+                    Please Complete your sign up process by subscribing to any of RotoPros plans.
                     <br><br>
                   </div>
                   <div class="common-loader" *ngIf="isLoading">
