--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -72,7 +72,7 @@
             </div>
             <ul>
               <li (window:resize)="onResize($event)">
-                <a *ngIf="headerIsStacked" style="width: auto" routerLink="{{(role == 'user' || role == 'provider')? '/user' : '/admin'}}">
+                <a *ngIf="headerIsStacked && loggedUser" style="width: auto" routerLink="{{(role == 'user' || role == 'provider')? '/user' : '/admin'}}">
                   Dashboard
                 </a>
               </li>
