--- a/src/app/front/components/sign-up/sign-up.component.html
+++ b/src/app/front/components/sign-up/sign-up.component.html
@@ -12,7 +12,8 @@
 
               <h3><span class="licnWrapper"><img src="../../../../assets/images/login_title_icn.png" alt=""
                                                  class="img-responsive"/></span><span>Sign Up</span></h3>
-              <p>Signup for a free account today.</p>
+              <!-- <p>Signup for a free account today.</p> -->
+              <p> Get started today! </p>
               <div #signUpError>
                 <div class="alert alert-danger fade " [class.in]="signUpErrors">
                   <span>{{signUpErrors}}</span>
