--- a/src/app/front/components/faq/faq.component.html
+++ b/src/app/front/components/faq/faq.component.html
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        <!-- <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
 
           <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="headingOne">
@@ -176,7 +176,167 @@
               </div>
             </div>
           </div>
-        </div><!-- panel-group -->
+        </div> -->
+        <!-- panel-group -->
+
+
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingOne">
+              <h4 class="panel-title">
+                <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <i class="more-less glyphicon glyphicon-minus"></i>
+                  HOW DO I BECOME A MEMBER?
+                </a>
+              </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+              <div class="panel-body">
+                <p> Click the sign up page on the main menu and enter all the pertinent information. Then choose your plan, make your payment and you’re good to go!</p>
+                <!-- <a routerLink="/signup" class="faqSignUpBtn">Sign Up</a> -->
+              </div>
+            </div>
+          </div>
+
+
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingExtra">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseExtra" aria-expanded="false" aria-controls="collapseExtra">
+                  <i class="more-less glyphicon glyphicon-plus"></i>
+                  HOW MUCH DOES A MEMBERSHIP COST?
+                </a>
+              </h4>
+            </div>
+            <div id="collapseExtra" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingExtra">
+              <div class="panel-body">
+                <p>We currently offer two options for membership plans, a monthly and a yearly option. They both come with the same features just one is paid once a month and the other is paid once a year.</p>
+                <p>The monthly plan is $29.99/month and the yearly plan is $249.99.</p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingTwo">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  <i class="more-less glyphicon glyphicon-plus"></i>
+                  WHAT DOES MY VIP MEMBERSHIP INCLUDE?
+                </a>
+              </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+              <div class="panel-body">
+                <p>You just signed up to receive profitable daily fantasy lineups and you may be wondering where you receive the lineups each day and how the site works. As a VIP member of RotoPros, you receive an all access membership, which includes lineup
+                  skeletons for DraftKings and FanDuel, a 24/7 member chat room, coaching from our Pros, and premium articles.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingThree">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  <i class="more-less glyphicon glyphicon-plus"></i>
+                  WHO ARE THE ‘PROS’ AND WHAT SPORTS DO THEY PROVIDE LINEUPS FOR?
+                </a>
+              </h4>
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+              <div class="panel-body">
+                <p>The Pros on staff and the sports they provide skeletons for are:</p>
+                <ul class="faqList">
+                  <li><strong>Nick -</strong> <span> NBA, NFL, MLB, and Soccer</span></li>
+                  <li><strong>Kdogg -</strong> <span> NBA, NFL, and MLB</span></li>
+                  <li><strong>Greg -</strong> <span> NBA, NFL, MLB and MMA</span></li>
+                  <li><strong>Matt -</strong> <span> NFL, NBA and NHL</span></li>
+                  <li><strong>Brett -</strong> <span> PGA</span></li>
+                  <li><strong>John -</strong> <span> NHL</span></li>
+                  <li><strong>Rob -</strong> <span> Soccer</span></li>
+                </ul>
+
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingFour">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                  <i class="more-less glyphicon glyphicon-plus"></i>
+                  WHERE DO I GET THE SKELETON LINEUPS?
+                </a>
+              </h4>
+            </div>
+            <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+              <div class="panel-body">
+                <p>First off, a skeleton lineup is a DFS lineup with two spots left out for you to fill in. When you signed up for your subscription an email invitation will be automatically sent for you to join our Slack Chat private lineups page and members
+                  only chat room. That invitation email can be found in the email you provided us when you signed up for your subscription. Slack chat is easy to navigate and is available on your desktop and for Android and IOS operating systems on your
+                  mobile devices. After you click on your email invitation and have accessed the Slack Chat app you will need to set up a profile for yourself and once that has been completed you will be automatically placed in our two slack chat rooms,
+                  which is our lineups channel and our members only chat room channel.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingFive">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                  <i class="more-less glyphicon glyphicon-plus"></i>
+                  HOW DOES THE LINEUP CHANNEL AND MEMBERS ONLY CHANNEL WORK?
+                </a>
+              </h4>
+            </div>
+            <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+              <div class="panel-body">
+                <p>Members only channel functions as an area for members to talk sports, discuss the day’s slate, get help with personal lineups and sweat daily fantasy winning lineups together. Providers are available in the room to answer questions about
+                  that day’s daily fantasy slate and the lineups they have provided you. The slate breakdown articles and cheat sheets for that day will be posted in this room.</p>
+                <p>Lineups channel is where you will find the lineups each day and functions strictly as the channel where providers post their lineups. We encourage members to chat with each other in the members chat only so the lineups channel remains
+                  free for providers to post lineups and members to be able to access and enter those lineups as efficiently as possible. The slate breakdown article and cheat sheet will also be posted in this channel.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingSix">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                  <i class="more-less glyphicon glyphicon-plus"></i>
+                  WHAT TIME WILL THE LINEUP SKELETONS BE AVAILABLE TO ME?
+                </a>
+              </h4>
+            </div>
+            <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+              <div class="panel-body">
+                <p>Lineups will be posted in the lineups channel 30 minutes before the start of the slates. Reacting to last minute injury news is an extremely important part of daily fantasy lineup construction and building profitable lineups. Injury news
+                  informs us of players that may not be starting for their team on that slate can open value plays that allow you to upgrade at other positions. Because this is such an import part of daily fantasy lineup construction we ask that you be
+                  patient when you are waiting for the lineups to come out during the 30 minutes time before lock.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingNine">
+              <h4 class="panel-title">
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+                  <i class="more-less glyphicon glyphicon-plus"></i>
+                  I STILL HAVE MORE QUESTIONS; ONCE I’M IN THE SLACK CHAT WILL ANYBODY BE ABLE TO HELP ME?
+                </a>
+              </h4>
+            </div>
+            <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingNine">
+              <div class="panel-body">
+                <p>Yes, RotoPros has a dedicated person that is always available to help answer your questions about daily fantasy, bankroll management and game selection.</p>
+
+                <p>Thank you again for signing up for RotoPros! Now that you know about us and were to find the lineups we look forward to meeting you and providing you with consistent winning daily fantasy sports lineups. We look forward to seeing you in
+                  our slack soon.</p>
+
+                <p>Lets win together!</p>
+              </div>
+            </div>
+          </div>
+        </div>
 
       </div>
     </div>
