--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -24,7 +24,9 @@
               <!--<li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/nfl-excel-tool">NFL Excel Tool<span class="sr-only">(current)</span></a>
               </li>-->
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+
+              
+              <!-- <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/mlb-excel-tool">Excel Tool<span class="sr-only">(current)</span></a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
@@ -35,7 +37,9 @@
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/injuries">Injury Feeds</a>
-              </li>
+              </li> -->
+
+
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/basics">DFS Basics</a>
               </li>
