settings and header updated

--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -19,7 +19,7 @@
               <!--<a routerLink="/lineup-optimizer/nfl">NFL Optimizer</a>-->
               <!--</div>-->
               <!--</li>-->
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+              <!-- <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/excel-tool">Excel Tool<span class="sr-only">(current)</span></a>
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
@@ -30,13 +30,13 @@
               </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/injuries">Injury Feeds</a>
-              </li>
+              </li> -->
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/basics">DFS Basics</a>
               </li>
-              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
+              <!-- <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/subscribe">Plans</a>
-              </li>
+              </li> -->
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: false}">
                 <a routerLink="/faq">FAQ</a>
               </li>
